--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.6",
     "@astrojs/check": "^0.8.2",
+    "astro": "^4.11.6",
+    "scss": "^0.2.4",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "sass": "^1.77.8"
   }
 }
